Related: fdo#30763 fill in default user realname under GNOME3

i.e. recognize that gnome-shell is a gnome session
so we use gconfbackend for default settings
so that we get a default name filled in for FirstName, LastName
so that the author/editor properties of new documents gets filled in by default
   out of the box
so that the last-used position in odf files gets restored for that user

Change-Id: I6630866e64414e886c80abad1ca6200ffc25b378